--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+<!-- 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -50,5 +50,18 @@
 			</plugin>
 		</plugins>
 	</build>
-
+ -->
+	<build>
+  	<plugins>
+    	<plugin>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-maven-plugin</artifactId>
+      		<executions>
+        		<execution>
+          			<goals><goal>repackage</goal></goals>
+        		</execution>
+      		</executions>
+    	</plugin>
+  </plugins>
+  </build>
 </project>
