--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		</dependency>
 	</dependencies>
 
-<!-- 	<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -50,8 +50,8 @@
 			</plugin>
 		</plugins>
 	</build>
- -->
-	<build>
+
+<!-- 	<build>
   	<plugins>
     	<plugin>
       		<groupId>org.springframework.boot</groupId>
@@ -63,5 +63,5 @@
       		</executions>
     	</plugin>
   </plugins>
-  </build>
+  </build> -->
 </project>
